Loose rubocop enforcement

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,9 @@ Style/StringLiterals:
 
 Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
+
+Metrics/BlockLength:
+  Max: 90
+
+Metrics/MethodLength:
+  Max: 20
